tối ưu lại service và controller