@@ -1,5 +1,7 @@
 package com.swp391.team6.cinema.service;
 
+import com.swp391.team6.cinema.dto.CustomerDTO;
+import com.swp391.team6.cinema.dto.ShowtimeDTO;
 import com.swp391.team6.cinema.entity.*;
 import com.swp391.team6.cinema.repository.*;
 import lombok.RequiredArgsConstructor;
@@ -8,9 +10,9 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.math.BigDecimal;
 import java.math.RoundingMode;
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Set;
+import java.time.LocalDateTime;
+import java.util.*;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -25,7 +27,80 @@ public class CounterBookingService {
     private final PricingService pricingService;
     private final BookingService bookingService;
     private final SeatLockService seatLockService;
-    private final PayOSService payOSService;
+
+    public List<ShowtimeDTO> getShowtimesForMovie(Long movieId, Long branchId) {
+        List<Showtime> showtimes = showtimeRepository.findByMovieAndBranch(movieId, branchId);
+        return showtimes.stream().map(s -> {
+            ShowtimeDTO dto = new ShowtimeDTO();
+            dto.setShowtimeId(s.getShowtimeId());
+            dto.setStartTime(s.getStartTime());
+            dto.setRoomName(s.getRoom().getRoomName());
+            return dto;
+        }).collect(Collectors.toList());
+    }
+
+    public List<Map<String, Object>> getSeatsWithStatus(Long showtimeId) {
+        Showtime st = showtimeRepository.findById(showtimeId)
+                .orElseThrow(() -> new IllegalArgumentException("Suất chiếu không tồn tại"));
+        List<Seat> allSeats = seatRepository.findByRoomRoomIdOrderBySeatRowAscSeatNumberAsc(st.getRoom().getRoomId());
+        Set<Long> occupied = bookingService.getOccupiedSeatIdsForShowtime(showtimeId);
+
+        return allSeats.stream().map(s -> {
+            Map<String, Object> map = new HashMap<>();
+            map.put("seatId", s.getSeatId());
+            map.put("seatRow", s.getSeatRow());
+            map.put("seatNumber", s.getSeatNumber());
+            map.put("seatType", s.getSeatType() != null ? s.getSeatType().toString() : "NORMAL");
+            boolean isLocked = seatLockService.isLocked(showtimeId, s.getSeatId());
+            map.put("isBooked", occupied.contains(s.getSeatId()) || isLocked);
+            return map;
+        }).collect(Collectors.toList());
+    }
+
+    public BigDecimal calculateOriginalPrice(Long showtimeId, List<Long> seatIds) {
+        Showtime showtime = showtimeRepository.findById(showtimeId).orElseThrow();
+        List<Seat> seats = seatRepository.findAllById(seatIds);
+        Long branchId = showtime.getRoom().getBranch().getBranchId();
+
+        return seats.stream()
+                .map(s -> pricingService.getPrice(branchId, s.getSeatType(), showtime.getStartTime()))
+                .reduce(BigDecimal.ZERO, BigDecimal::add);
+    }
+
+    public Map<String, Object> validatePromotion(String promoCode, BigDecimal currentTotal, Long branchId) {
+        Promotion promo = promotionRepository.findByPromoCode(promoCode)
+                .orElseThrow(() -> new IllegalArgumentException("Mã giảm giá không tồn tại"));
+
+        if (promo.getStatus() != Promotion.Status.active || promo.getBranch() == null)
+            throw new IllegalArgumentException("Mã giảm giá hiện không hoạt động");
+
+        if (!promo.getBranch().getBranchId().equals(branchId))
+            throw new IllegalArgumentException("Mã không áp dụng cho chi nhánh này");
+
+        LocalDateTime now = LocalDateTime.now();
+        if (promo.getEndDate() != null && now.isAfter(promo.getEndDate()))
+            throw new IllegalArgumentException("Mã đã hết hạn");
+
+        if (currentTotal.compareTo(promo.getMinBookingAmount()) < 0)
+            throw new IllegalArgumentException("Đơn hàng chưa đạt giá trị tối thiểu " + promo.getMinBookingAmount());
+
+        BigDecimal discount = (promo.getDiscountType() == Promotion.DiscountType.percent)
+                ? currentTotal.multiply(promo.getDiscountValue()).divide(new BigDecimal("100"), 2, RoundingMode.HALF_UP)
+                : promo.getDiscountValue();
+
+        Map<String, Object> response = new HashMap<>();
+        response.put("discountAmount", discount);
+        response.put("finalAmount", currentTotal.subtract(discount).max(BigDecimal.ZERO));
+        return response;
+    }
+
+    public Optional<CustomerDTO> findCustomer(String contact) {
+        Optional<User> user = contact.contains("@")
+                ? userRepository.findByEmail(contact)
+                : userRepository.findByPhone(contact);
+
+        return user.map(u -> new CustomerDTO(u.getUserId(), u.getFullName(), u.getEmail(), u.getPhone(), u.getStatus().toString(), u.getCreatedAt()));
+    }
 
     @Transactional
     public Booking processCounterBooking(User staff, Long showtimeId, List<Long> seatIds,
@@ -35,77 +110,24 @@ public class CounterBookingService {
         boolean isPayOS = "payos".equalsIgnoreCase(paymentMethodStr) || "online".equalsIgnoreCase(paymentMethodStr);
         boolean isCash = "cash".equalsIgnoreCase(paymentMethodStr);
 
-        if (!isPayOS && !isCash) {
-            throw new IllegalArgumentException("Phương thức thanh toán không hợp lệ (Chỉ hỗ trợ cash hoặc payos)");
-        }
+        if (!isPayOS && !isCash) throw new IllegalArgumentException("Phương thức thanh toán không hợp lệ");
 
         Showtime showtime = showtimeRepository.findById(showtimeId)
                 .orElseThrow(() -> new IllegalArgumentException("Suất chiếu không tồn tại"));
 
-        User customer = null;
-        if (email != null && !email.trim().isEmpty()) {
-            customer = userRepository.findByEmail(email.trim()).orElse(null);
-        } else if (phone != null && !phone.trim().isEmpty()) {
-            customer = userRepository.findByPhone(phone.trim()).orElse(null);
-        }
+        User customer = findCustomer(email != null && !email.isBlank() ? email : phone)
+                .flatMap(dto -> userRepository.findById(dto.getUser_id()))
+                .orElseGet(() -> userRepository.findFirstByRole(User.UserRole.GUEST)
+                        .orElseThrow(() -> new IllegalArgumentException("Hệ thống chưa có tài khoản GUEST")));
 
-        if (customer == null) {
-            customer = userRepository.findFirstByRole(User.UserRole.CUSTOMER)
-                    .orElseThrow(() -> new IllegalArgumentException("Hệ thống chưa cấu hình tài khoản mặc định cho Role CUSTOMER"));
-        }
-
-        Long branchId = showtime.getRoom().getBranch().getBranchId();
-        List<Seat> allSeats = seatRepository.findByRoomRoomIdOrderBySeatRowAscSeatNumberAsc(showtime.getRoom().getRoomId());
-        Set<Long> occupied = bookingService.getOccupiedSeatIdsForShowtime(showtimeId);
-
-        BigDecimal total = BigDecimal.ZERO;
-        List<Seat> selectedSeats = new ArrayList<>();
-
-        for (Long sid : seatIds) {
-            Seat seat = allSeats.stream().filter(s -> s.getSeatId().equals(sid)).findFirst()
-                    .orElseThrow(() -> new IllegalArgumentException("Ghế ID " + sid + " không tồn tại"));
-            if (occupied.contains(sid)) throw new IllegalArgumentException("Ghế đã được đặt hoặc đang được giữ");
-
-            selectedSeats.add(seat);
-            total = total.add(pricingService.getPrice(branchId, seat.getSeatType(), showtime.getStartTime()));
-        }
-
+        BigDecimal total = calculateOriginalPrice(showtimeId, seatIds);
         Promotion appliedPromo = null;
+
         if (promoCode != null && !promoCode.isBlank()) {
-            appliedPromo = promotionRepository.findByPromoCode(promoCode).orElse(null);
+            Map<String, Object> promoResult = validatePromotion(promoCode, total, staff.getBranchId());
+            appliedPromo = promotionRepository.findByPromoCode(promoCode).get();
+            total = (BigDecimal) promoResult.get("finalAmount");
 
-            if (appliedPromo == null || appliedPromo.getStatus() != Promotion.Status.active) {
-                throw new IllegalArgumentException("Mã giảm giá không tồn tại hoặc không khả dụng");
-            }
-            if (appliedPromo.getBranch() == null) {
-                throw new IllegalArgumentException("Mã giảm giá này chưa được kích hoạt cho bất kỳ chi nhánh nào");
-            }
-            if (!appliedPromo.getBranch().getBranchId().equals(branchId)) {
-                throw new IllegalArgumentException("Mã giảm giá này không áp dụng cho chi nhánh này");
-            }
-            if (total.compareTo(appliedPromo.getMinBookingAmount()) < 0) {
-                throw new IllegalArgumentException("Đơn hàng không đủ giá trị tối thiểu để áp dụng mã này");
-            }
-            java.time.LocalDateTime now = java.time.LocalDateTime.now();
-            if (appliedPromo.getStartDate() != null && now.isBefore(appliedPromo.getStartDate())) {
-                throw new IllegalArgumentException("Chương trình khuyến mãi chưa bắt đầu");
-            }
-            if (appliedPromo.getEndDate() != null && now.isAfter(appliedPromo.getEndDate())) {
-                throw new IllegalArgumentException("Mã giảm giá đã hết hạn");
-            }
-            if (appliedPromo.getUsageLimit() != null && appliedPromo.getUsedCount() >= appliedPromo.getUsageLimit()) {
-                throw new IllegalArgumentException("Mã giảm giá đã hết lượt sử dụng");
-            }
-
-            BigDecimal discount = BigDecimal.ZERO;
-            if (appliedPromo.getDiscountType() == Promotion.DiscountType.percent) {
-                discount = total.multiply(appliedPromo.getDiscountValue())
-                        .divide(new BigDecimal("100"), 2, RoundingMode.HALF_UP);
-            } else {
-                discount = appliedPromo.getDiscountValue();
-            }
-
-            total = total.subtract(discount).max(BigDecimal.ZERO);
             appliedPromo.setUsedCount(appliedPromo.getUsedCount() + 1);
             promotionRepository.save(appliedPromo);
         }
@@ -114,41 +136,28 @@ public class CounterBookingService {
         booking.setShowtime(showtime);
         booking.setUser(customer);
         booking.setBookingType(Booking.BookingType.counter);
-
         booking.setStatus(isPayOS ? Booking.BookingStatus.pending : Booking.BookingStatus.paid);
         booking.setTotalAmount(total);
-
-        if (appliedPromo != null) {
-            booking.setPromotion(appliedPromo);
-        }
-
+        if (appliedPromo != null) booking.setPromotion(appliedPromo);
         booking = bookingRepository.save(booking);
 
-        for (Seat seat : selectedSeats) {
+        for (Long sid : seatIds) {
+            Seat seat = seatRepository.findById(sid).orElseThrow();
             BookingSeat bs = new BookingSeat();
             bs.setBooking(booking);
             bs.setSeat(seat);
             bookingSeatRepository.save(bs);
+            seatLockService.releaseSeat(showtimeId, sid);
         }
 
         Payment payment = new Payment();
         payment.setBooking(booking);
         payment.setAmount(total);
         payment.setOrderCode(booking.getBookingId());
-
-        if (isPayOS) {
-            payment.setMethod(Payment.PaymentMethod.online);
-            payment.setPaymentStatus(Payment.PaymentStatus.pending);
-        } else {
-            payment.setMethod(Payment.PaymentMethod.cash);
-            payment.setPaymentStatus(Payment.PaymentStatus.success);
-            payment.setPaymentTime(java.time.LocalDateTime.now());
-        }
+        payment.setMethod(isPayOS ? Payment.PaymentMethod.online : Payment.PaymentMethod.cash);
+        payment.setPaymentStatus(isPayOS ? Payment.PaymentStatus.pending : Payment.PaymentStatus.success);
+        if (isCash) payment.setPaymentTime(LocalDateTime.now());
         paymentRepository.save(payment);
-
-        for (Long sid : seatIds) {
-            seatLockService.releaseSeat(showtimeId, sid);
-        }
 
         return booking;
     }
@@ -158,30 +167,24 @@ public class CounterBookingService {
         Booking booking = bookingRepository.findByIdWithDetails(bookingId)
                 .orElseThrow(() -> new IllegalArgumentException("Không tìm thấy đơn đặt vé"));
 
-        if (booking.getStatus() == Booking.BookingStatus.cancelled) {
-            throw new IllegalArgumentException("Vé này đã bị hủy trước đó");
-        }
+        if (booking.getStatus() == Booking.BookingStatus.cancelled) return;
 
-        java.time.LocalDateTime now = java.time.LocalDateTime.now();
-        if (booking.getStatus() == Booking.BookingStatus.paid && now.isAfter(booking.getShowtime().getStartTime())) {
-            throw new IllegalArgumentException("Không thể hủy vé đã thanh toán sau khi suất chiếu bắt đầu.");
+        if (booking.getStatus() == Booking.BookingStatus.paid && LocalDateTime.now().isAfter(booking.getShowtime().getStartTime())) {
+            throw new IllegalArgumentException("Không thể hủy vé sau khi suất chiếu bắt đầu");
         }
 
         if (booking.getPromotion() != null) {
             Promotion promo = booking.getPromotion();
-
-            if (promo.getUsedCount() != null && promo.getUsedCount() > 0) {
-                promo.setUsedCount(promo.getUsedCount() - 1);
-                promotionRepository.save(promo);
-            }
+            promo.setUsedCount(Math.max(0, promo.getUsedCount() - 1));
+            promotionRepository.save(promo);
         }
 
         booking.setStatus(Booking.BookingStatus.cancelled);
         bookingRepository.save(booking);
 
-        paymentRepository.findByBooking(booking).ifPresent(payment -> {
-            payment.setPaymentStatus(Payment.PaymentStatus.failed);
-            paymentRepository.save(payment);
+        paymentRepository.findByBooking(booking).ifPresent(p -> {
+            p.setPaymentStatus(Payment.PaymentStatus.failed);
+            paymentRepository.save(p);
         });
     }
 }
